# ai-classifier-sample

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/: README.md  advanced_usage.py  basic_usage.py  complete_example.py
src/ai_classifier_sample/: __init__.py  main.py
src/ai_classifier_sample/config/: settings.py
src/ai_classifier_sample/models/: __init__.py  classifier.py  conversation.py
src/ai_classifier_sample/service/: __init__.py  classifier.py
tests/: __init__.py  test_settings.py
