[project]
name = "ai-classifier-sample"
version = "1.0.0"
description = "A clean, provider-agnostic message classification service using AI models"
authors = [
    {name = "Akash Rai", email = "arakashrai@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
homepage = "https://github.com/theakashrai/ai-classifier-sample"
repository = "https://github.com/theakashrai/ai-classifier-sample"
documentation = "https://github.com/theakashrai/ai-classifier-sample#readme"
keywords = ["ai", "classification", "machine-learning", "aws", "bedrock", "langchain", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "boto3 (>=1.40.17,<2.0.0)",
    "langchain-aws (>=0.2.31,<0.3.0)",
    "langgraph (>=0.6.6,<0.7.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "pydantic-settings (>=2.0.0,<3.0.0)"
]

[project.optional-dependencies]
dev = ["black (>=25.1.0,<26.0.0)", "flake8 (>=7.3.0,<8.0.0)", "pre-commit (>=4.3.0,<5.0.0)", "isort (>=6.0.1,<7.0.0)", "autoflake (>=2.3.1,<3.0.0)", "pytest (>=8.0.0,<9.0.0)"]
[tool.poetry]
packages = [
    { include = "ai_classifier_sample", from = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
]
